# bumpy_vector

./: CHANGELOG.md  Cargo.toml  README.md
hooks/: hook.d
hooks/pre-commit.d/: set-dash-euo-pipefail.sh  todo-finder.sh  update-readme-md.sh
hooks/pre-push.d/: run-tests.sh
src/: lib.rs
